fix reponsiveness on iOS7

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -12,7 +12,7 @@
 		float:left;
 		width: 100%;
 		margin: 0 auto;
-		height: 70vh;
+		height: 400px;
 		background-color: white;
 		-webkit-transition: all .65s linear;
 		transition: all .65s linear;
